jwks-server-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: jwks
  namespace: istio-system
  labels:
    app: jwks

spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: jwks

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwks
  namespace: istio-system
  labels:
    app: jwks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jwks
  template:
    metadata:
      labels:
        app: jwks
    spec:
      volumes:
        - name: public-key
          secret:
            secretName: jwt-public-key
      containers:
        - name: jwks
          image: docker.io/tinsae/jwks-server:3.0.1
          volumeMounts:
            - name: public-key
              mountPath: app/key
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
