shop-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: shop
  labels:
    app: shop
    service: shop
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: shop

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
  labels:
    app: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
        - name: shop
          image: docker.io/tinsae/shop-demo:2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
