user-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    service: user
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: user

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  minReadySeconds: 20

  template:
    metadata:
      labels:
        app: user
    spec:
      volumes:
        - name: private-key
          secret:
            secretName: jwt-private-key
      containers:
        - name: user
          image: docker.io/tinsae/user-demo:5.0.0
          volumeMounts:
            - name: private-key
              mountPath: /etc/jwt
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
