request-authentication.yml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: shop
  jwtRules:
    - issuer: "http://user:3000"
      jwksUri: "http://jwks:3000/jwks"
      forwardOriginalToken: true

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-auth-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: shop
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
      to:
        - operation:
            paths: ["/shop"]
